--- a/app/src/main/res/layout/activity_group_create.xml
+++ b/app/src/main/res/layout/activity_group_create.xml
@@ -1,55 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1"
-    android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:weightSum="1">
 
-    <FrameLayout
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="75dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="New group"
-            android:id="@+id/textView7"
-            android:layout_gravity="center" />
-    </FrameLayout>
-    <TextView
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Image"
-        android:id="@+id/textView1"
-        android:layout_gravity="center_horizontal" />
+        android:paddingTop="@dimen/appbar_padding_top"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:layout_scrollFlags="scroll|enterAlways"
+            app:popupTheme="@style/AppTheme.PopupOverlay">
+
+        </android.support.v7.widget.Toolbar>
+    </android.support.design.widget.AppBarLayout>
 
     <ImageView
+        android:id="@+id/image_logo"
         android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:id="@+id/imageView"
-        android:onClick="onClickGallery"
-        android:layout_gravity="center_horizontal" />
+        android:layout_height="50dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_margin="10dp"
+        android:src="@drawable/timetable" />
 
     <TextView
+        android:id="@+id/titel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Name"
-        android:id="@+id/textView2"
-        android:layout_gravity="center_horizontal" />
+        android:layout_centerHorizontal="true"
+        android:text="@string/new_group_label"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_below="@id/appbar"
+        android:layout_marginTop="10dp"/>
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/group_create_image"
+        android:layout_above="@+id/imageView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:onClick="onClickGallery"
+        android:src="@drawable/defaultavatar"
+        android:layout_marginBottom="56dp"
+        android:layout_above="@+id/group_name_label"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:id="@+id/group_name_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/name_label"
+        android:layout_above="@+id/newGroupName"
+        android:layout_centerHorizontal="true"/>
 
     <EditText
+        android:id="@+id/newGroupName"
         android:layout_width="230dp"
         android:layout_height="wrap_content"
-        android:id="@+id/newGroupName"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:layout_above="@+id/bt_save"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="118dp" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Save"
         android:id="@+id/bt_save"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:onClick="onClick"/>
+        android:onClick="onClick"
+        android:text="@string/create_group"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        />
 
-</LinearLayout>
+</RelativeLayout>
