--- a/app/src/main/res/layout/activity_task_create.xml
+++ b/app/src/main/res/layout/activity_task_create.xml
@@ -1,57 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:weightSum="1"
     android:orientation="vertical">
 
-    <FrameLayout
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="75dp">
+        android:layout_height="wrap_content"
+        android:paddingTop="@dimen/appbar_padding_top"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:layout_scrollFlags="scroll|enterAlways"
+            app:popupTheme="@style/AppTheme.PopupOverlay">
+
+        </android.support.v7.widget.Toolbar>
+    </android.support.design.widget.AppBarLayout>
+
+    <ImageView
+        android:id="@+id/image_logo"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_margin="10dp"
+        android:src="@drawable/timetable"
+        android:contentDescription="@string/logo_image" />
+
+    <FrameLayout
+        android:id="@+id/titel_frame"
+        android:layout_width="match_parent"
+        android:layout_height="75dp"
+        android:layout_below="@id/appbar">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="New task"
-            android:id="@+id/textView7"
+            android:text="@string/task_create_titel"
+            android:id="@+id/task_titel"
             android:layout_gravity="center" />
     </FrameLayout>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Subject"
-        android:id="@+id/textView3"
-        android:layout_gravity="center_horizontal" />
+        android:text="@string/subject"
+        android:id="@+id/subject_label"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/titel_frame"/>
 
     <EditText
         android:layout_width="230dp"
         android:layout_height="wrap_content"
         android:id="@+id/tf_name"
-        android:layout_gravity="center_horizontal" />
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/subject_label"
+        android:layout_margin="5dp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Description"
-        android:id="@+id/textView4"
-        android:layout_gravity="center_horizontal" />
+        android:layout_margin="10dp"
+        android:text="@string/task_description"
+        android:id="@+id/task_description_label"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/tf_name"/>
 
     <EditText
         android:layout_width="230dp"
         android:layout_height="wrap_content"
         android:id="@+id/tf_description"
-        android:layout_gravity="center_horizontal" />
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/task_description_label"
+        android:layout_margin="5dp"
+        android:inputType="text" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Group"
-        android:id="@+id/textView8"
-        android:layout_weight="0.28"
-        android:layout_gravity="center_horizontal"
-        android:layout_below="@+id/tf_date"
+        android:text="@string/group_label"
+        android:id="@+id/group_label"
+        android:layout_below="@+id/tf_description"
         android:layout_centerHorizontal="true" />
 
     <Spinner
@@ -59,25 +96,23 @@
         android:layout_height="wrap_content"
         android:id="@+id/spinnerGroup"
         android:spinnerMode="dropdown"
-        android:layout_alignParentTop="true"
-        android:layout_alignEnd="@+id/tf_time"
-        android:layout_gravity="center_horizontal" /><![CDATA[
-
-    />
-
-    ]]>
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/group_label"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Timeframe"
-        android:id="@+id/textView6"
-        android:layout_gravity="center_horizontal" />
+        android:text="@string/timeframe"
+        android:id="@+id/timeframe_label"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/spinnerGroup"/>
 
     <RelativeLayout
+        android:id="@+id/innerlayout"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_gravity="center_horizontal">
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/timeframe_label">
 
         <TextView
             android:layout_width="wrap_content"
@@ -106,24 +141,26 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="For who?"
-        android:id="@+id/textView5"
-        android:layout_gravity="center_horizontal"
-        android:onClick="onDateClick"/>
+        android:text="@string/receiver"
+        android:id="@+id/receiver_label"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/innerlayout"/>
 
     <Spinner
         android:layout_width="230dp"
         android:layout_height="wrap_content"
         android:id="@+id/spinnerUser"
         android:spinnerMode="dropdown"
-        android:layout_gravity="center_horizontal" />
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/receiver_label"/>
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Save"
+        android:text="@string/assign_task"
         android:id="@+id/bt_save"
         android:layout_gravity="center_horizontal"
+        android:layout_alignParentBottom="true"
         android:onClick="onClick"/>
 
-</LinearLayout>
+</RelativeLayout>
