--- a/app/src/main/res/layout/fragment_my_task.xml
+++ b/app/src/main/res/layout/fragment_my_task.xml
@@ -3,17 +3,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.kb5012.timetable.FragmentUserScreen.MyTask">
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_my_task"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/spinner">
+        <ListView
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:id="@+id/android:list"
+            android:layout_below="@+id/spinner"
+            android:layout_alignParentStart="true" />
 
-    <ListView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:id="@+id/android:list"
-        android:layout_below="@+id/spinner"/>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
     <Spinner
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:id="@+id/spinner"/>
+        android:id="@+id/spinner"
+        android:background="?attr/colorPrimary" />
+
 
 
 </RelativeLayout>
